--- a/angular.json
+++ b/angular.json
@@ -46,6 +46,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -80,7 +81,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "mon-projet-angular:build"
+            "browserTarget": "mon-projet-angular:build",
+            "disableHostCheck": true
           },
           "configurations": {
             "production": {
